# nuitrack-rs

./: Cargo.toml  LICENSE  README.md  build.rs
examples/std-async/: Cargo.toml
examples/std-async/src/: main.rs
examples/tokio-runtime-feature/basic/: Cargo.toml
examples/tokio-runtime-feature/basic/src/: main.rs
examples/tokio-runtime-feature/tui/: Cargo.toml  tui-debug.log.2025-07-19
examples/tokio-runtime-feature/tui/src/: main.rs
include/nuitrack_bridge/: core.h  device.h  hand_tracker.h  skeleton_tracker.h
include/nuitrack_bridge/modules/: color_sensor.h  depth_sensor.h  gesture_recognizer.h  hand_tracker.h  skeleton_tracker.h  user_tracker.h
include/nuitrack_bridge/types/: bounding_box.h  depth_frame.h  gesture.h  gesture_data.h  hand.h  hand_data.h  output_mode.h  rgb_frame.h  skeleton.h  skeleton_data.h  user.h  user_frame.h  vector3.h
src/: lib.rs
src/nuitrack/: mod.rs
src/nuitrack/async_api/: async_dispatch.rs  color_sensor.rs  depth_sensor.rs  generate_tracker.rs  gesture_recognizer.rs  hand_tracker.rs  macros.rs  mod.rs  session.rs  session_builder.rs  skeleton_tracker.rs  user_tracker.rs
src/nuitrack/blocking_api/: hand_tracker.rs  mod.rs  nuitrack.rs
src/nuitrack/shared_types/: depth_frame.rs  error.rs  gesture.rs  gesture_frame.rs  hand.rs  hand_frame.rs  mod.rs  rgb_frame.rs  session_config.rs  skeleton.rs  skeleton_frame.rs  user.rs  user_frame.rs
src/nuitrack_bridge/: core.cc  core.rs  device.cc  device.rs  hand_tracker.cc  hand_tracker.rs  mod.rs  skeleton_tracker.cc  skeleton_tracker.rs
src/nuitrack_bridge/modules/: color_sensor.cc  color_sensor.rs  depth_sensor.cc  depth_sensor.rs  gesture_recognizer.cc  gesture_recognizer.rs  hand_tracker.cc  hand_tracker.rs  mod.rs  skeleton_tracker.cc  skeleton_tracker.rs  user_tracker.cc  user_tracker.rs
src/nuitrack_bridge/types/: bounding_box.cc  bounding_box.rs  depth_frame.cc  depth_frame.rs  gesture.cc  gesture.rs  gesture_data.cc  gesture_data.rs  hand.cc  hand.rs  hand_data.cc  hand_data.rs  mod.rs  output_mode.cc  output_mode.rs  rgb_frame.cc  rgb_frame.rs  skeleton.cc  skeleton.rs  skeleton_data.cc  skeleton_data.rs  user.cc  user.rs  user_frame.cc  user_frame.rs  vector3.cc  vector3.rs
validation_apps/test-concurrent-init/: Cargo.toml
validation_apps/test-concurrent-init/src/: main.rs
validation_apps/test-serde-feature-builds/: Cargo.toml
validation_apps/test-serde-feature-builds/src/: main.rs
validation_apps/test-stream-cleanup/: Cargo.toml
validation_apps/test-stream-cleanup/src/: main.rs
validation_apps/test-stream-merge/: Cargo.toml
validation_apps/test-stream-merge/src/: main.rs
