[package]
name = "test-concurrent-init"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
nuitrack-rs = { path ="../..", features = ["tokio_runtime"]}
anyhow = "1.0"
tokio = {version = "1", features = ["time", "rt-multi-thread"]}
futures-util = { version = "0.3", default-features = false, features = ["std"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }