[package]
name = "tokio-runtime-feature-basic"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
nuitrack-rs = { path ="../../..", features = ["tokio_runtime"]}
anyhow = "1.0"
tokio = {version = "1", features = ["time", "rt-multi-thread"]}
futures-util = { version = "0.3", default-features = false, features = ["std"]}