[package]
name = "tui-example"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
nuitrack-rs = { path ="../../..", features = ["tokio_runtime"]}
anyhow = "1.0"
tokio = {version = "1", features = ["time", "rt-multi-thread", "macros"]}
futures-util = { version = "0.3", default-features = false, features = ["std"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-appender = "0.2"

# TUI Dependencies
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
image = "0.25"
fast_image_resize = "5.2.0"
